backend: tighten security and unify CORS; enforce safe registration